src/third_party/nasm/travis/test/br3392751.stderr
./travis/test/br3392751.asm:2: error: invalid 64-bit effective address
