src/third_party/nasm/travis/test/br3392751.asm
bits 64
mov ax, xmm0[dword 0x1]
